# backend-di--python-lib-template

./: .coveragerc  .gitignore  README.md  configure_local.py  pyproject.toml  pytest.ini  setup.py  sonar-project.properties
.github/actions/check-entrypoints/: action.yml
.github/actions/send-deploy-notification/: action.yml
.github/actions/tests-and-quality/: action.yml
.github/workflows/: deploy-artifact.yml  deploy.yml  detect-changes.yml  run-tests.yml
docs/: README.md
pylibtemplate/config/: __init__.py
pylibtemplate/config/envs/: environment.py
pylibtemplate/config/log/: logger.py
pylibtemplate/config/packaging/: executable.py  git.py  package_version.py  setup.py
pylibtemplate/config/packaging/commands/: increment_version.py  skipci_git_commit.py
pylibtemplate/config/packaging/package_version_providers/: base_pvp.py  package_version_provider.py  spacial_pokemon_pvp.py
pylibtemplate/config/paths/: __init__.py  path.py  s3_paths.py
pylibtemplate/config/secrets/: __init__.py  aws_kv_secret.py  secret.py
pylibtemplate/config/versioning/: version.py
pylibtemplate/src/dummy/: base.py  basic_assistant.py
test/config/: test_aws_kv_secret.py  test_environment.py  test_logger.py  test_paths.py
test/src/: dummy_basic_assistant.py
